--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <!-- Header: Logo centrado -->
-  <header>
+  <header style="display: flex; justify-content: space-between; align-items: center; gap: 16px;">
     <img src="images/nemaWashiLogo.png" alt="Nemawashi AI Logo" class="logo" loading="lazy">
   </header>
 
@@ -30,8 +30,15 @@
     </div>
   </section>
 
-  <!-- Carousel de Casos Reales -->
-  <!-- Carrusel eliminado por solicitud del usuario -->
+  <!-- Modelos de IA con los que trabajamos -->
+  <section class="ia-models-section" style="padding: 36px 0 18px 0; text-align: center;">
+  <h2 style="font-size: 1.06rem; font-weight: 800; color: #232323; margin-bottom: 18px; background: none; box-shadow: none; text-align: center;">Modelos de IA con los que trabajamos</h2>
+  <div style="display: flex; justify-content: center; align-items: center;">
+    <div style="background: #fff; box-shadow: 0 4px 22px 0 rgba(34,34,34,0.09); border-radius: 14px; padding: 12px 12px 7px 12px; max-width: 275px; width: 100%;">
+      <img src="/images/llms.png" alt="Modelos de IA" style="max-width: 250px; width: 100%; height: auto; display: block; margin: 0 auto; border-radius: 10px;">
+    </div>
+  </div>
+</section>
 
   <!-- Proceso y AI Agent Section (Bloques lado a lado) -->
   <section class="nemawashi-dual-section">
@@ -58,6 +65,9 @@
 
   <!-- Use Cases Section -->
   <section class="use-cases">
+    <div style="text-align:center; margin-bottom: 16px;">
+      <a href="https://n8n.nemawashi.ai/form/0a6edec4-db73-410b-93e9-e448f45735b3" target="_blank" rel="noopener" class="cta-header-btn">DESBLOQUEA LA IA PARA TU NEGOCIO</a>
+    </div>
     <h2>Casos de Uso Reales: IA que Ahorra Tiempo</h2>
     <div class="use-cards">
       <!-- Caso 1: Pedidos y Citas Automatizados (Pizzería/Clínicas) -->
@@ -98,6 +108,10 @@
     </div>
   </section>
 
+  <div style="display: flex; justify-content: center; margin: 28px 0 12px 0;">
+    <a href="https://n8n.nemawashi.ai/form/0a6edec4-db73-410b-93e9-e448f45735b3" target="_blank" rel="noopener" class="cta-after-cases-btn">DESBLOQUEA LA IA PARA TU NEGOCIO</a>
+  </div>
+
   <!-- Modales de casos de uso -->
   <div id="usecase-modal-bg" style="display:none;position:fixed;z-index:10001;left:0;top:0;width:100vw;height:100vh;background:rgba(34,34,34,0.38);justify-content:center;align-items:center;">
     <div id="usecase-modal" style="background:#fff;padding:32px 24px 22px 24px;border-radius:18px;box-shadow:0 8px 32px 0 rgba(34,34,34,0.13);max-width:420px;width:95vw;display:flex;flex-direction:column;gap:12px;position:relative;">
@@ -110,34 +124,11 @@
   <footer>
     <div class="footer-links">
       <a href="/privacidad.html" title="Política de Privacidad">Política de Privacidad</a>
-      <a href="#" title="Contacto" id="contacto-link">Contacto</a>
+      <a href="https://n8n.nemawashi.ai/form/0a6edec4-db73-410b-93e9-e448f45735b3" target="_blank" rel="noopener" title="Contacto" id="contacto-link">Contacto</a>
     </div>
     <div class="copyright"> 2025 Nemawashi AI. Todos los derechos reservados.</div>
   </footer>
-  <div id="contact-modal" style="display:none;position:fixed;z-index:10001;left:0;top:0;width:100vw;height:100vh;background:rgba(34,34,34,0.35);justify-content:center;align-items:center;">
-    <form id="contact-form" style="background:#fff;padding:32px 24px;border-radius:18px;box-shadow:0 8px 32px 0 rgba(34,34,34,0.13);max-width:350px;width:90vw;display:flex;flex-direction:column;gap:18px;position:relative;">
-      <button type="button" id="close-contact-modal" style="position:absolute;top:10px;right:14px;font-size:1.5rem;background:none;border:none;cursor:pointer;">&times;</button>
-      <h2 style="margin-bottom:8px;color:#444;font-size:1.2rem;font-weight:700;">Contacto</h2>
-      <label for="contact-email" style="font-size:1rem;">Tu email</label>
-      <input type="email" id="contact-email" name="email" required style="padding:10px 12px;font-size:1rem;border-radius:8px;border:1px solid #e0e0e0;" />
-      <label for="contact-msg" style="font-size:1rem;">Mensaje</label>
-      <textarea id="contact-msg" name="msg" required rows="4" style="padding:10px 12px;font-size:1rem;border-radius:8px;border:1px solid #e0e0e0;"></textarea>
-      
-      <div id="contact-status" style="font-size:1rem;margin-top:8px;color:#2a7a2a;display:none;"></div>
-    </form>
-  </div>
-  <script>
-    // Modal contacto
-    const contactoLink = document.getElementById('contacto-link');
-    const contactModal = document.getElementById('contact-modal');
-    const closeContactModal = document.getElementById('close-contact-modal');
-    contactoLink.onclick = (e) => { e.preventDefault(); contactModal.style.display = 'flex'; };
-    closeContactModal.onclick = () => { contactModal.style.display = 'none'; };
-    contactModal.onclick = (e) => { if (e.target === contactModal) contactModal.style.display = 'none'; };
-    // Enviar email
-    document.getElementById('contact-form').onsubmit = async function(e) {
-      e.preventDefault();
-      const email = document.getElementById('contact-email').value;
+
       const msg = document.getElementById('contact-msg').value;
       const statusDiv = document.getElementById('contact-status');
       statusDiv.style.display = 'none';
