--- a/src/caso-uso-pedidos-citas.html
+++ b/src/caso-uso-pedidos-citas.html
@@ -184,7 +184,7 @@
         ¿Listo para transformar la gestión de tus solicitudes, ahorrar tiempo y dinero, y ofrecer una experiencia excepcional a tus clientes?
       </p>
       <div style="text-align:center;">
-        <a href="mailto:info@nemawashi.ai" style="display:inline-block;padding:15px 38px;background:#e26a2c;color:#fff;border-radius:24px;font-size:19px;font-weight:700;text-decoration:none;box-shadow:0 2px 8px 0 rgba(34,34,34,0.09);transition:background 0.2s;">Contacta para una Demostración Personalizada</a>
+        <a href="https://n8n.nemawashi.ai/form/0a6edec4-db73-410b-93e9-e448f45735b3" style="display:inline-block;padding:15px 38px;background:#e26a2c;color:#fff;border-radius:24px;font-size:19px;font-weight:700;text-decoration:none;box-shadow:0 2px 8px 0 rgba(34,34,34,0.09);transition:background 0.2s;">Contacta para una Demostración Personalizada</a>
         <div style="font-size:15px;color:#666;margin-top:8px;">Puedes escribirnos directamente o hacer clic en el botón para agendar tu demo.</div>
       </div>
     </section>
