--- a/public/caso-uso-pedidos-citas.html
+++ b/public/caso-uso-pedidos-citas.html
@@ -128,6 +128,9 @@
   Tu navegador no soporta la reproducción de audio.
 </audio>
           </div>
+          <div style="text-align:center;">
+            <a href="https://n8n.nemawashi.ai/form/0a6edec4-db73-410b-93e9-e448f45735b3" style="display:inline-block;padding:15px 38px;background:#e26a2c;color:#fff;border-radius:24px;font-size:19px;font-weight:700;text-decoration:none;box-shadow:0 2px 8px 0 rgba(34,34,34,0.09);transition:background 0.2s;">Me interesa</a>
+          </div>
         </div>
         <!-- Demo 2: Video -->
         <div style="flex:1 1 320px;min-width:270px;max-width:440px;background:#fff;border-radius:16px;box-shadow:0 2px 10px 0 rgba(34,34,34,0.06);padding:22px 22px 18px 22px;">
@@ -140,6 +143,9 @@
   <source src="/images/agenteTelegram.mp4" type="video/mp4">
   Tu navegador no soporta la reproducción de video.
 </video>
+          </div>
+          <div style="text-align:center;">
+            <a href="https://n8n.nemawashi.ai/form/0a6edec4-db73-410b-93e9-e448f45735b3" style="display:inline-block;padding:15px 38px;background:#e26a2c;color:#fff;border-radius:24px;font-size:19px;font-weight:700;text-decoration:none;box-shadow:0 2px 8px 0 rgba(34,34,34,0.09);transition:background 0.2s;">Me interesa</a>
           </div>
         </div>
       </div>
@@ -169,7 +175,7 @@
         Estas demostraciones son un ejemplo concreto de cómo nuestra solución maneja la interacción con el cliente y organiza la información. La eficiencia y precisión que ves aplicada a los pedidos de pizzería es directamente transferible a la gestión de citas y otras solicitudes en tu negocio.
       </p>
     </section>
-
+ 
     <!-- SECCIÓN FINAL: Beneficios y ROI -->
     <section style="margin-top:54px;padding-bottom:28px;">
       <h2 style="font-size:26px;font-weight:800;color:#232323;margin-bottom:14px;letter-spacing:-0.5px;">Resultados Tangibles para Tu Negocio</h2>
