--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nemawashi AI - Automatización IA para PYMEs</title>
   <meta name="description" content="Automatización, agentes y soluciones de IA prácticas para PYMEs. Descubre cómo ahorrar tiempo hablando con Nema, nuestro agente IA." />
-  <meta name="keywords" content="automatización IA, inteligencia artificial, agentes inteligentes, productividad, PYMEs, chatbots, asistentes virtuales, optimización de procesos, ahorro de tiempo, soluciones IA, Nemawashi AI, automatización empresarial, IA para empresas, tareas repetitivas, digitalización, software inteligente, eficiencia operativa, transformación digital, tecnología para negocios" />
+  <meta name="keywords" content="automatización IA, inteligencia artificial, IA Murcia, agentes inteligentes, productividad, PYMEs, chatbots, asistentes virtuales, optimización de procesos, ahorro de tiempo, soluciones IA, Nemawashi AI, automatización empresarial, IA para empresas, tareas repetitivas, digitalización, software inteligente, eficiencia operativa, transformación digital, tecnología para negocios" />
   <link rel="stylesheet" href="styles/manifold-fonts.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/nemaWashiLogo.png">
@@ -31,7 +31,7 @@
   </section>
 
   <!-- Modelos de IA con los que trabajamos -->
-  <section class="ia-models-section" style="padding: 36px 0 18px 0; text-align: center;">
+  <section class="ia-models-section" style="padding: 0px 0 20px 0; text-align: center;">
   <h2 style="font-size: 1.06rem; font-weight: 800; color: #232323; margin-bottom: 18px; background: none; box-shadow: none; text-align: center;">Modelos de IA con los que trabajamos</h2>
   <div style="display: flex; justify-content: center; align-items: center;">
     <div style="background: #fff; box-shadow: 0 4px 22px 0 rgba(34,34,34,0.09); border-radius: 14px; padding: 12px 12px 7px 12px; max-width: 275px; width: 100%;">
@@ -46,11 +46,25 @@
     <div class="dual-blocks-wrapper">
       <div class="dual-block left-block">
         <h2>Cómo construimos tu Agente IA</h2>
-        <div class="process-steps">
-          <div class="process-step"><span class="process-icon">🔎</span><strong> Discover</strong><br><span class="process-desc">Entendemos tu negocio, procesos y objetivos.</span></div>
-          <div class="process-step"><span class="process-icon">🎨</span><strong> Prototype</strong><br><span class="process-desc">Diseñamos el flujo de automatización adaptado a tus necesidades.</span></div>
-          <div class="process-step"><span class="process-icon">🛠️</span><strong> Build</strong><br><span class="process-desc">Construimos e integramos tu Agente IA en tus sistemas actuales.</span></div>
-          <div class="process-step"><span class="process-icon">📈</span><strong> Grow</strong><br><span class="process-desc">Monitoreamos y mejoramos continuamente a medida que creces.</span></div>
+        <div class="process-step">
+          <span class="process-icon">🔎</span>
+          <strong>Conectamos contigo</strong><br>
+          <span class="process-desc">Hablamos sobre tu negocio, entendemos lo que te frustra y detectamos oportunidades de automatización.</span>
+        </div>
+        <div class="process-step">
+          <span class="process-icon">🎨</span>
+          <strong>Prototipo en acción</strong><br>
+          <span class="process-desc">Creamos una solución a medida para que veas cómo una IA puede liberarte del trabajo repetitivo sin que muevas un dedo.</span>
+        </div>
+        <div class="process-step">
+          <span class="process-icon">🛠️</span>
+          <strong>Implementamos</strong><br>
+          <span class="process-desc">Integración total con tus sistemas actuales. Tu agente de IA empieza a trabajar por ti desde el primer día.</span>
+        </div>
+        <div class="process-step">
+          <span class="process-icon">📈</span>
+          <strong>Escalamos juntos</strong><br>
+          <span class="process-desc">Monitoreamos, mejoramos y sumamos nuevas automatizaciones conforme crece tu operación.</span>
         </div>
       </div>
       <div class="dual-block right-block">
